Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-71553

[Reg 5.11->5.12] QtQuickCompiler in release builds results in broken translations

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.12.0
    • 5.12.0 Beta 3
    • Build System, QML: Compiler
    • None
    • Qt 5.12 Beta 3
      QtCreator 4.7.2
      macOS 10.13.6
    • Android, iOS/tvOS/watchOS, macOS
    • 00b1ff4607a560a2df674d56a70ecf3bd3e4f3df (qt/qtdeclarative/5.12.0)

      In all my projects using Qt 5.12 the translation is broken for release builds if

      CONFIG+=qtquickcompiler

      just wanted to start a more complex testing of Qt 5.12 Beta 3 with some Beta Testers of my Apps.
      all my tests from debug builds are looking good, then I tested release builds and found a showstopper:
      my Apps normally are in english and translated into german - most of my customers are from germany
      all is translated using Linguist
      then I noticed that translation in 5.12 release builds is broken:
      on german devices, some translations are not done (see attached screenshots)
      this happens on Android, macOS, iOS,
      exactly same project and translation files are working well on 5.11.2
      doesn’t matter if QtC 4.7.1 or 4.7.2
      clear build dir, clean project, lupdate / lrelease doesn’t help
      all can be tested from my QtWS 2018 conference app at github but happens on all of my projects

       

      workaround for now: disabling Qt Quick Compiler

        1. 512_ts_mixed_release.png
          274 kB
          Ekkehard
        2. speaker_detail.png
          129 kB
          Ekkehard
        3. ts_missing.png
          55 kB
          Ekkehard
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            frederik Frederik Gladhorn
            ekkescorner Ekkehard
            Votes:
            1 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes